--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 # Directories
 .vs/
-/bin/
+bin/
 bin-int/
+x64/
 
 # Files
 *.user
 *.sln
+*.suo
+*.sln.docstates
+*.sdf
 **.vcxproj
 **.vcxproj.filters
 **.vcxproj.user
