--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=874,181
+ViewportPos=1065,115
 ViewportId=0xE927CF2F
-Size=1280,701
+Size=616,701
 Collapsed=0
 
 [Window][Example: Console]
@@ -16,18 +16,23 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
 [Window][Test]
-ViewportPos=642,996
+ViewportPos=1408,629
 ViewportId=0x784DD132
-Size=638,270
+Size=342,207
+Collapsed=0
+
+[Window][Example: Documents]
+ViewportPos=172,195
+ViewportId=0x1FD64BEB
+Size=607,944
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=190,232 Size=1280,701 Split=Y
+DockSpace   ID=0x3BC79352 Pos=112,154 Size=1280,701 Split=Y
   DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=520,606 Selected=0xDE6E0C33
   DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=0,0 CentralNode=1 Selected=0xE87781F4
 
