--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -31,6 +31,11 @@ ViewportId=0x1FD64BEB
 Size=607,944
 Collapsed=0
 
+[Window][ExampleLayer]
+Pos=10,4
+Size=305,107
+Collapsed=0
+
 [Docking][Data]
 DockSpace   ID=0x3BC79352 Pos=112,154 Size=1280,701 Split=Y
   DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=520,606 Selected=0xDE6E0C33
