--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ x64/
 **.vcxproj.user
 **.csproj
 
+#Holt files
+*.log
 Holt-Profile-Runtime.json
 Holt-Profile-Shutdown.json
 Holt-Profile-Startup.json
