--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -21,10 +21,9 @@ Collapsed=0
 DockId=0x3BC79352,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1600,900
 Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x3BC79352 Window=0x4647B76E Pos=164,191 Size=1600,881 CentralNode=1 Selected=0x54723243
+DockSpace ID=0x3BC79352 Pos=34,76 Size=1600,881 CentralNode=1 Selected=0x54723243
 
