--- a/Holt-Editor/imgui.ini
+++ b/Holt-Editor/imgui.ini
@@ -1,11 +1,11 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1600,900
+Size=1920,1017
 Collapsed=0
 
 [Window][Settings]
 Pos=0,19
-Size=451,881
+Size=343,998
 Collapsed=0
 DockId=0x00000003,0
 
@@ -15,13 +15,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=453,19
-Size=1147,881
+Pos=345,19
+Size=1575,998
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=254,82 Size=1600,881 Split=X Selected=0x54723243
-  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=451,881 Selected=0x54723243
-  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1147,881 CentralNode=1 Selected=0x13926F0B
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=0,42 Size=1920,998 Split=X Selected=0x54723243
+  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=343,881 Selected=0x54723243
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1575,881 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
 
