--- a/Holt-Editor/imgui.ini
+++ b/Holt-Editor/imgui.ini
@@ -4,10 +4,10 @@ Size=1600,900
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
+Pos=1263,19
 Size=337,881
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000002,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -15,13 +15,21 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=339,19
-Size=1261,881
+Pos=287,19
+Size=974,881
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000001,0
+
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=285,881
+Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1600,881 Split=X Selected=0x54723243
-  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=337,881 Selected=0x54723243
-  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1261,881 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=164,191 Size=1600,881 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=285,881 Selected=0x2E9237F7
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1313,881 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=974,881 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=337,881 Selected=0x54723243
 
