--- a/Holt-Editor/imgui.ini
+++ b/Holt-Editor/imgui.ini
@@ -15,21 +15,29 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=287,19
-Size=974,881
+Pos=325,19
+Size=936,881
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=285,881
+Size=323,354
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
+
+[Window][Properties]
+Pos=0,375
+Size=323,525
+Collapsed=0
+DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=164,191 Size=1600,881 Split=X Selected=0x13926F0B
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=285,881 Selected=0x2E9237F7
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1313,881 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=974,881 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1600,881 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=323,881 Split=Y Selected=0x2E9237F7
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=285,354 Selected=0x2E9237F7
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=285,525 Selected=0x199AB496
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1275,881 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=936,881 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
     DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=337,881 Selected=0x54723243
 
