Added camera component

--- a/Holt-Editor/imgui.ini
+++ b/Holt-Editor/imgui.ini
@@ -4,8 +4,8 @@ Size=1600,900
 Collapsed=0
 
 [Window][Settings]
-Pos=1263,19
-Size=337,881
+Pos=1184,19
+Size=416,881
 Collapsed=0
 DockId=0x00000002,0
 
@@ -15,29 +15,37 @@ Size=400,400
 Collapsed=0
 
 [Window][Viewport]
-Pos=325,19
-Size=936,881
+Pos=360,19
+Size=977,881
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=323,354
+Size=358,354
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
 Pos=0,375
-Size=323,525
+Size=358,525
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Stats]
+Pos=1339,19
+Size=261,881
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1600,881 Split=X Selected=0x13926F0B
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=323,881 Split=Y Selected=0x2E9237F7
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=285,354 Selected=0x2E9237F7
-    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=285,525 Selected=0x199AB496
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1275,881 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=936,881 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=337,881 Selected=0x54723243
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=155,115 Size=1600,881 Split=X Selected=0x13926F0B
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1337,881 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=358,881 Split=Y Selected=0x2E9237F7
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=285,354 Selected=0x2E9237F7
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=285,525 Selected=0x199AB496
+    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=977,881 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=857,881 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=416,881 Selected=0x54723243
+  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=261,881 Selected=0x2E4EBCAA
 
